<resources>
    <string name="app_name">PD</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="billy_simers">Билли Симерс</string>
    <string name="stephen_king">Стивен Кинг</string>
    <string name="genres">фантастика, ужасы и мистика</string>
    <string name="rating_value">4.04</string>
    <string name="reviews_value">Отзывов: 183</string>
    <string name="poster_description">Новый роман Стивена Кинга! Захватывающая история о хорошем парне, который выполняет плохую работу…</string>
    <string name="more">Подробнее…</string>
    <string name="label_author">Автор:</string>
    <string name="label_genres">Жанр</string>
    <string name="label_rating">Ваша оценка:</string>
    <string name="label_average_rating">Средняя оценка:</string>
    <string name="age_limit">16+</string>
    <string name="label_annotation">Аннотация</string>
    <string name="annotation">Новый роман Стивена Кинга! Захватывающая история о хорошем парне, который выполняет плохую работу. Стивен Кинг — один из самых популярных авторов современности. Он написал свыше шести десятков бестселлеров, которые переведены на 44 языка, изданы в 80 странах мира и разошлись тиражом свыше 400.000.000 экземпляров. «Лучшая книга Стивена Кинга за долгие годы» по версии газеты The Guardian.</string>
    <string name="morphological">Морфологический разбор</string>
    <string name="label_reviews">Отзывы</string>
    <string name="should_like">Вам понравится</string>
    <string name="profile_name">Имя Фамилия</string>
    <string name="favorites">Избранное</string>
    <string name="read">Прочитанное</string>
    <string name="exit">ВЫХОД</string>
    <string name="phone_label">Номер телефона</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="phone_number">+7 (999) 999–99–99</string>
    <string name="change_avatar">Изменить фотографию</string>
    <string name="change_miniature">Изменить миниатюру</string>
    <string name="preferences_text">Эта подборка создана с учетом ваших предпочтений</string>
    <string name="favourites_count">123</string>
    <string name="password">Пароль</string>
    <string name="registration_label">Регистрация</string>
    <string name="delimiter">|</string>
    <string name="authorization_button">Войти</string>
    <string name="registration_button">Зарегестрироваться</string>
    <string name="authorization_label">Авторизация</string>
    <string name="e_mail">E-mail</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="login">E-mail / Phone</string>
    <string name="settings">Настройки</string>
    <string name="comment">Прекрасная книга! Читаю взахлеб!</string>
    <string name="filter">Фильтр</string>
    <string name="search">Поиск</string>
    <string name="your_rating">Ваша оценка:</string>
    <string name="comment_placeholder">Поделитесь своим мнением насчёт этой книги</string>
    <string name="add_comment">+ Оставить отзыв</string>
    <string name="email">Почта</string>
    <string name="example_email_com">example@email.com</string>
    <string name="reviews_label">Отзывов:</string>
    <string name="value">183</string>
    <string name="apply">Отправить</string>
</resources>