<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/poster"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/round_bg_item_poster"
    android:padding="10dp">

    <ImageView
        android:id="@+id/poster_image"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/poster_name"
        style="@style/poster_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:text="@string/billy_simers"
        app:layout_constraintEnd_toStartOf="@id/ic_favourite"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/poster_author"
        style="@style/poster_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/stephen_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/poster_name" />

    <TextView
        android:id="@+id/poster_genres"
        style="@style/poster_genres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/poster_author" />

    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:src="@drawable/star_filled"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/poster_genres" />

    <TextView
        android:id="@+id/poster_rating"
        style="@style/poster_rating_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:text="@string/rating_value"
        app:layout_constraintBottom_toBottomOf="@id/ic_star"
        app:layout_constraintStart_toEndOf="@id/ic_star"
        app:layout_constraintTop_toTopOf="@id/ic_star" />

    <TextView
        android:id="@+id/poster_reviews"
        style="@style/poster_rating_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/reviews_value"
        app:layout_constraintBottom_toBottomOf="@id/ic_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_rating"
        app:layout_constraintTop_toTopOf="@id/ic_star" />

    <ImageView
        android:id="@+id/ic_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:src="@drawable/favourite_black"
        app:layout_constraintBottom_toBottomOf="@id/poster_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/poster_name" />

    <TextView
        android:id="@+id/poster_description"
        style="@style/poster_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="6dp"
        android:text="@string/poster_description"
        app:layout_constraintBottom_toTopOf="@+id/more"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/ic_star"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/more"
        style="@style/poster_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/more"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@id/poster_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/poster_author" />


</androidx.constraintlayout.widget.ConstraintLayout>