<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.DetailsFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/poster_name"
        style="@style/poster_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/billy_simers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/label_author"
        style="@style/poster_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/label_author"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/poster_name" />

    <TextView
        android:id="@+id/author"
        style="@style/poster_rating_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:text="@string/stephen_king"
        app:layout_constraintBottom_toBottomOf="@id/label_author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_author"
        app:layout_constraintTop_toTopOf="@id/label_author" />

    <TextView
        android:id="@+id/label_genres"
        style="@style/poster_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/label_genres"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/label_author" />

    <TextView
        android:id="@+id/genres"
        style="@style/poster_rating_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/genres"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_genres"
        app:layout_constraintTop_toTopOf="@id/label_genres" />

    <TextView
        android:id="@+id/label_rating"
        style="@style/poster_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/label_rating"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/genres" />

    <!--TODO: Доделать звёзды-->
    <!--<ImageView
        android:id="@+id/ic_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_black"
        app:layout_constraintTop_toTopOf="@id/label_grade"
        app:layout_constraintStart_toEndOf="@id/label_grade"
        app:layout_constraintBottom_toBottomOf="@id/label_grade"/>

    <ImageView
        android:id="@+id/ic_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_black"
        app:layout_constraintTop_toTopOf="@id/ic_star_1"
        app:layout_constraintStart_toEndOf="@id/ic_star_1"
        app:layout_constraintBottom_toBottomOf="@id/ic_star_1"/>

    <ImageView
        android:id="@+id/ic_star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_black"
        app:layout_constraintTop_toTopOf="@id/ic_star_2"
        app:layout_constraintStart_toEndOf="@id/ic_star_2"
        app:layout_constraintBottom_toBottomOf="@id/ic_star_2"/>

    <ImageView
        android:id="@+id/ic_star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_black"
        app:layout_constraintTop_toTopOf="@id/ic_star_3"
        app:layout_constraintStart_toEndOf="@id/ic_star_3"
        app:layout_constraintBottom_toBottomOf="@id/ic_star_3"/>

    <ImageView
        android:id="@+id/ic_star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_black"
        app:layout_constraintTop_toTopOf="@id/ic_star_4"
        app:layout_constraintStart_toEndOf="@id/ic_star_4"
        app:layout_constraintBottom_toBottomOf="@id/ic_star_4"/>-->

    <TextView
        android:id="@+id/label_average_rating"
        style="@style/poster_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/label_average_rating"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/label_rating" />

    <ImageView
        android:id="@+id/ic_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_filled"
        app:layout_constraintBottom_toBottomOf="@id/label_average_rating"
        app:layout_constraintStart_toEndOf="@id/label_average_rating"
        app:layout_constraintTop_toTopOf="@id/label_average_rating" />

    <TextView
        android:id="@+id/rating_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_value"
        app:layout_constraintBottom_toBottomOf="@id/ic_star"
        app:layout_constraintStart_toEndOf="@id/ic_star"
        app:layout_constraintTop_toTopOf="@id/ic_star" />

    <TextView
        android:id="@+id/poster_reviews"
        style="@style/poster_rating_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/reviews_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/label_average_rating" />

    <TextView
        android:id="@+id/age_limit"
        style="@style/poster_rating_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/age_limit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/poster_name"
        app:layout_constraintTop_toBottomOf="@id/poster_reviews" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/description_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="image, age_limit" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_barrier" />

</androidx.constraintlayout.widget.ConstraintLayout>